# weather

./: pyproject.toml
notebooks/: 01_study_files.ipynb  02_daily_patterns.ipynb  03_bezier_curves.ipynb  04_temp_fit.ipynb  05_correlations.ipynb  06_peak_fit.ipynb  07_ends_fit.ipynb  08_day_fit.ipynb  09_peak_analysis.ipynb  10_marco.ipynb  m_test.py  weather.code-workspace
src/weather/: __init__.py  config.py
src/weather/fit/: day_fit.py  ends_fit.py  format_check.py  interfaces.py  peak_fit.py
src/weather/fit/peak_fit/: calc.py  helpers.py  optimize.py  plot.py
src/weather/helpers/: 02_daily_patterns.ipynb  dataframes.py  epw_read.py  figures.py  filter.py  time.py  weather_data.py
src/weather/macro/: main.py  peak_detect.py
src/weather/peak_analysis/: main.py
src/weather/peak_fit/: main.py
tests/: test_bezier.py
